themedir=/usr/share/icons/Tango-Brown
size = 16x16
context=mimetypes

iconsdir = $(themedir)/$(size)/$(context)

icons_DATA =                            \
	application-certificate.png	\
	application-x-executable.png	\
	ascii.png	\
	audio-x-generic.png	\
	binary.png	\
	contents2.png	\
	deb.png	\
	document.png	\
	empty.png	\
	exec.png	\
	folder_tar.png	\
	gnome-fs-executable.png	\
	gnome-fs-regular.png	\
	gnome-mime-applciation-vnd.stardivision.writer.png	\
	gnome-mime-application-magicpoint.png	\
	gnome-mime-application-msword.png	\
	gnome-mime-application-ogg.png	\
	gnome-mime-application-pdf.png	\
	gnome-mime-application-postscript.png	\
	gnome-mime-application-rtf.png	\
	gnome-mime-application-vnd.lotus-1-2-3.png	\
	gnome-mime-application-vnd.ms-excel.png	\
	gnome-mime-application-vnd.oasis.opendocument.presentation.png	\
	gnome-mime-application-vnd.oasis.opendocument.spreadsheet.png	\
	gnome-mime-application-vnd.oasis.opendocument.text.png	\
	gnome-mime-application-vnd.stardivision.calc.png	\
	gnome-mime-application-vnd.stardivision.impress.png	\
	gnome-mime-application-vnd.sun.xml.calc.png	\
	gnome-mime-application-vnd.sun.xml.impress.png	\
	gnome-mime-application-vnd.sun.xml.writer.png	\
	gnome-mime-application-wordperfect.png	\
	gnome-mime-application-x-7z-compressed.png	\
	gnome-mime-application-x-abiword.png	\
	gnome-mime-application-x-applix-spreadsheet.png	\
	gnome-mime-application-x-applix-word.png	\
	gnome-mime-application-x-archive.png	\
	gnome-mime-application-x-arj.png	\
	gnome-mime-application-x-bzip-compressed-tar.png	\
	gnome-mime-application-x-bzip.png	\
	gnome-mime-application-x-compressed-tar.png	\
	gnome-mime-application-x-compress.png	\
	gnome-mime-application-x-cpio-compressed.png	\
	gnome-mime-application-x-cpio.png	\
	gnome-mime-application-x-deb.png	\
	gnome-mime-application-x-dvi.png	\
	gnome-mime-application-x-executable.png	\
	gnome-mime-application-x-gnumeric.png	\
	gnome-mime-application-x-gzip.png	\
	gnome-mime-application-x-killustrator.png	\
	gnome-mime-application-x-kpresenter.png	\
	gnome-mime-application-x-kspread.png	\
	gnome-mime-application-x-kword.png	\
	gnome-mime-application-x-ms-dos-executable.png	\
	gnome-mime-application-x-perl.png	\
	gnome-mime-application-x-php.png	\
	gnome-mime-application-x-python-bytecode.png	\
	gnome-mime-application-x-rar.png	\
	gnome-mime-application-x-rpm.png	\
	gnome-mime-application-x-shellscript.png	\
	gnome-mime-application-x-shockwave-flash.png	\
	gnome-mime-application-x-tar.png	\
	gnome-mime-application-x-tarz.png	\
	gnome-mime-application-x-tex.png	\
	gnome-mime-application-zip.png	\
	gnome-mime-audio.png	\
	gnome-mime-image.png	\
	gnome-mime-text-html.png	\
	gnome-mime-text.png	\
	gnome-mime-text-vnd.wap.wml.png	\
	gnome-mime-text-x-csh.png	\
	gnome-mime-text-x-python.png	\
	gnome-mime-text-x-zsh.png	\
	gnome-mime-video.png	\
	gnome-package.png	\
	html.png	\
	image.png	\
	image-x-generic.png	\
	mime_ascii.png	\
	misc.png	\
	package_editors.png	\
	package.png	\
	package_wordprocessing.png	\
	package-x-generic.png	\
	plan.png	\
	rpm.png	\
	shellscript.png	\
	sound.png	\
	spreadsheet.png	\
	stock_addressbook.png	\
	stock_calendar.png	\
	stock_script.png	\
	tar.png	\
	template_source.png	\
	text-html.png	\
	text-x-generic.png	\
	text-x-generic-template.png	\
	text-x-script.png	\
	tgz.png	\
	txt2.png	\
	txt.png	\
	unknown.png	\
	vcalendar.png	\
	video.png	\
	video-x-generic.png	\
	x-directory-normal-drag-accept.png	\
	x-directory-normal-home.png	\
	x-directory-normal-open.png	\
	x-directory-normal.png	\
	x-directory-remote.png	\
	x-office-address-book.png	\
	x-office-calendar.png	\
	x-office-document.png	\
	x-office-presentation.png	\
	x-office-spreadsheet.png	\
	zip.png	

EXTRA_DIST =				\
	$(icons_DATA)

install-data-local: install-iconsDATA
