themedir=/usr/share/icons/Tango-Brown
size = 16x16
context=places

iconsdir = $(themedir)/$(size)/$(context)

icons_DATA =                            \
	application-x-gnome-saved-search.png	\
	desktop.png	\
	emptytrash.png	\
	folder_home.png	\
	folder.png	\
	folder-remote.png	\
	folder-saved-search.png	\
	gnome-fs-desktop.png	\
	gnome-fs-directory.png	\
	gnome-fs-ftp.png	\
	gnome-fs-home.png	\
	gnome-fs-network.png	\
	gnome-fs-nfs.png	\
	gnome-fs-server.png	\
	gnome-fs-share.png	\
	gnome-fs-smb.png	\
	gnome-fs-ssh.png	\
	gnome-fs-trash-empty.png	\
	gnome-main-menu.png	\
	gnome-stock-trash.png	\
	gtk-delete.png	\
	gtk-network.png	\
	network_local.png	\
	network.png	\
	network-server.png	\
	network-workgroup.png	\
	redhat-network-server.png	\
	server.png	\
	start-here.png	\
	stock_delete.png	\
	stock_folder.png	\
	trashcan_empty.png	\
	user-desktop.png	\
	user-home.png	\
	user-trash.png	

EXTRA_DIST =				\
	$(icons_DATA)

install-data-local: install-iconsDATA
