themedir=/usr/share/icons/Tango-Brown
size = 22x22
context=devices

iconsdir = $(themedir)/$(size)/$(context)

icons_DATA =                            \
	3floppy_unmount.png	\
	audio-card.png	\
	audio-input-microphone.png	\
	battery.png	\
	camera-photo.png	\
	camera.png	\
	camera_unmount.png	\
	camera-video.png	\
	cdrom_unmount.png	\
	cdwriter_unmount.png	\
	chardevice.png	\
	computer.png	\
	display.png	\
	drive-cdrom.png	\
	drive-harddisk.png	\
	drive-removable-media.png	\
	dvd_unmount.png	\
	gnome-dev-battery.png	\
	gnome-dev-cdrom-audio.png	\
	gnome-dev-cdrom.png	\
	gnome-dev-computer.png	\
	gnome-dev-disc-cdr.png	\
	gnome-dev-disc-cdrw.png	\
	gnome-dev-disc-dvdram.png	\
	gnome-dev-disc-dvdrom.png	\
	gnome-dev-disc-dvdr-plus.png	\
	gnome-dev-disc-dvdr.png	\
	gnome-dev-disc-dvdrw.png	\
	gnome-dev-dvd.png	\
	gnome-dev-ethernet.png	\
	gnome-dev-floppy.png	\
	gnome-dev-harddisk-1394.png	\
	gnome-dev-harddisk.png	\
	gnome-dev-harddisk-usb.png	\
	gnome-dev-ipod.png	\
	gnome-dev-keyboard.png	\
	gnome-dev-media-cf.png	\
	gnome-dev-media-memory.png	\
	gnome-dev-media-ms.png	\
	gnome-dev-media-sdmmc.png	\
	gnome-dev-media-sm.png	\
	gnome-dev-mouse-ball.png	\
	gnome-dev-mouse-optical.png	\
	gnome-dev-printer.png	\
	gnome-dev-removable-1394.png	\
	gnome-dev-removable.png	\
	gnome-dev-removable-usb.png	\
	gnome-dev-wavelan.png	\
	gnome-fs-client.png	\
	gnome-stock-mic.png	\
	gtk-cdrom.png	\
	gtk-floppy.png	\
	gtk-harddisk.png	\
	harddrive.png	\
	hdd_unmount.png	\
	input-gaming.png	\
	input-keyboard.png	\
	input-mouse.png	\
	joystick.png	\
	keyboard.png	\
	kjobviewer.png	\
	kxkb.png	\
	media-cdrom.png	\
	media-floppy.png	\
	mouse.png	\
	multimedia-player.png	\
	network-wired.png	\
	network-wireless.png	\
	printer1.png	\
	printer.png	\
	printer-remote.png	\
	printmgr.png	\
	stock_mic.png	\
	stock_printers.png	\
	system.png	\
	usbpendrive_unmount.png	\
	video-display.png	\
	yast_HD.png	\
	yast_idetude.png	\
	yast_joystick.png	\
	yast_mouse.png	\
	yast_printer.png	\
	yast_soundcard.png	

EXTRA_DIST =						\
	$(icons_DATA)

install-data-local: install-iconsDATA

uninstall-local:
	rm -rf $(themedir)/22x22/$(context)
