themedir=/usr/share/icons/Tango-Brown
size = 24x24
context=actions

iconsdir = $(themedir)/$(size)/$(context)

icons_DATA =                            \
	address-book-new.png	\
	appointment-new.png	\
	appointment.png	\
	back.png	\
	bookmark_add.png	\
	bookmark-new.png	\
	bookmarks_list_add.png	\
	bottom.png	\
	centrejust.png	\
	contact-new.png	\
	document-new.png	\
	document-open.png	\
	document-print.png	\
	document-print-preview.png	\
	document-properties.png	\
	document-save-as.png	\
	document-save.png	\
	down.png	\
	edit-clear.png	\
	editclear.png	\
	edit-copy.png	\
	editcopy.png	\
	edit-cut.png	\
	editcut.png	\
	edit-delete.png	\
	edit-find.png	\
	edit-find-replace.png	\
	edit-paste.png	\
	editpaste.png	\
	edit-redo.png	\
	edit-undo.png	\
	exit.png	\
	filefind.png	\
	filenew.png	\
	fileopen.png	\
	fileprint.png	\
	filequickprint.png	\
	filesaveas.png	\
	filesave.png	\
	find.png	\
	finish.png	\
	folder_new.png	\
	folder-new.png	\
	format-indent-less.png	\
	format-indent-more.png	\
	format-justify-center.png	\
	format-justify-fill.png	\
	format-justify-left.png	\
	format-justify-right.png	\
	format-text-bold.png	\
	format-text-italic.png	\
	format-text-strikethrough.png	\
	format-text-underline.png	\
	forward.png	\
	gnome-lockscreen.png	\
	gnome-logout.png	\
	gnome-searchtool.png	\
	gnome-stock-mail-fwd.png	\
	gnome-stock-mail-new.png	\
	gnome-stock-mail-rpl.png	\
	gnome-stock-text-indent.png	\
	gnome-stock-text-unindent.png	\
	go-bottom.png	\
	go-down.png	\
	go-first.png	\
	go-home.png	\
	gohome.png	\
	go-jump.png	\
	go-last.png	\
	go-next.png	\
	go-previous.png	\
	go-top.png	\
	go-up.png	\
	gtk-add.png	\
	gtk-bold.png	\
	gtk-clear.png	\
	gtk-copy.png	\
	gtk-cut.png	\
	gtk-find-and-replace.png	\
	gtk-find.png	\
	gtk-go-back-ltr.png	\
	gtk-go-back-rtl.png	\
	gtk-go-down.png	\
	gtk-go-forward-ltr.png	\
	gtk-go-forward-rtl.png	\
	gtk-goto-bottom.png	\
	gtk-goto-first-ltr.png	\
	gtk-goto-first-rtl.png	\
	gtk-goto-last-ltr.png	\
	gtk-goto-last-rtl.png	\
	gtk-goto-top.png	\
	gtk-go-up.png	\
	gtk-home.png	\
	gtk-indent.png	\
	gtk-italic.png	\
	gtk-jump-to-ltr.png	\
	gtk-jump-to-rtl.png	\
	gtk-justify-center.png	\
	gtk-justify-fill.png	\
	gtk-justify-left.png	\
	gtk-justify-right.png	\
	gtk-media-forward-ltr.png	\
	gtk-media-forward-rtl.png	\
	gtk-media-next-ltr.png	\
	gtk-media-next-rtl.png	\
	gtk-media-pause.png	\
	gtk-media-play-ltr.png	\
	gtk-media-previous-ltr.png	\
	gtk-media-previous-rtl.png	\
	gtk-media-record.png	\
	gtk-media-rewind-ltr.png	\
	gtk-media-rewind-rtl.png	\
	gtk-media-stop.png	\
	gtk-new.png	\
	gtk-open.png	\
	gtk-paste.png	\
	gtk-print.png	\
	gtk-print-preview.png	\
	gtk-properties.png	\
	gtk-redo-ltr.png	\
	gtk-refresh.png	\
	gtk-remove.png	\
	gtk-save-as.png	\
	gtk-save.png	\
	gtk-stop.png	\
	gtk-strikethrough.png	\
	gtk-underline.png	\
	gtk-undo-ltr.png	\
	gtk-unindent.png	\
	kfind.png	\
	kfm_home.png	\
	leftjust.png	\
	list-add.png	\
	list-remove.png	\
	lock.png	\
	mail_forward.png	\
	mail-forward.png	\
	mail-mark-junk.png	\
	mail-message-new.png	\
	mail_new.png	\
	mail_replyall.png	\
	mail-reply-all.png	\
	mail_reply.png	\
	mail-reply-sender.png	\
	mail-send-receive.png	\
	mail_spam.png	\
	media-eject.png	\
	media-playback-pause.png	\
	media-playback-start.png	\
	media-playback-stop.png	\
	media-record.png	\
	media-seek-backward.png	\
	media-seek-forward.png	\
	media-skip-backward.png	\
	media-skip-forward.png	\
	next.png	\
	player_eject.png	\
	player_end.png	\
	player_fwd.png	\
	player_pause.png	\
	player_play.png	\
	player_record.png	\
	player_rew.png	\
	player_start.png	\
	player_stop.png	\
	previous.png	\
	process-stop.png	\
	redhat-home.png	\
	redo.png	\
	reload3.png	\
	reload_all_tabs.png	\
	reload_page.png	\
	reload.png	\
	rightjust.png	\
	search.png	\
	start.png	\
	stock_add-bookmark.png	\
	stock_bottom.png	\
	stock_copy.png	\
	stock_cut.png	\
	stock_down.png	\
	stock_file-properites.png	\
	stock_first.png	\
	stock_help-add-bookmark.png	\
	stock_home.png	\
	stock_last.png	\
	stock_left.png	\
	stock_mail-compose.png	\
	stock_mail-reply.png	\
	stock_mail-reply-to-all.png	\
	stock_mail-send-receive.png	\
	stock_media-fwd.png	\
	stock_media-next.png	\
	stock_media-pause.png	\
	stock_media-play.png	\
	stock_media-prev.png	\
	stock_media-rec.png	\
	stock_media-rew.png	\
	stock_media-stop.png	\
	stock_new-address-book.png	\
	stock_new-appointment.png	\
	stock_new-bcard.png	\
	stock_new-dir.png	\
	stock_new-tab.png	\
	stock_new-text.png	\
	stock_new-window.png	\
	stock_paste.png	\
	stock_print.png	\
	stock_print-preview.png	\
	stock_properties.png	\
	stock_redo.png	\
	stock_refresh.png	\
	stock_right.png	\
	stock_save-as.png	\
	stock_save.png	\
	stock_search-and-replace.png	\
	stock_search.png	\
	stock_spam.png	\
	stock_stop.png	\
	stock_text_bold.png	\
	stock_text_center.png	\
	stock_text_indent.png	\
	stock_text_italic.png	\
	stock_text_justify.png	\
	stock_text_left.png	\
	stock_text_right.png	\
	stock_text-strikethrough.png	\
	stock_text_underlined.png	\
	stock_text_unindent.png	\
	stock_top.png	\
	stock_undo.png	\
	stock_up.png	\
	stop.png	\
	system-lock-screen.png	\
	system-log-out.png	\
	system-search.png	\
	system-shutdown.png	\
	tab_new.png	\
	tab-new.png	\
	text_bold.png	\
	text_italic.png	\
	text_strike.png	\
	text_under.png	\
	top.png	\
	undo.png	\
	up.png	\
	view-refresh.png	\
	window_new.png	\
	window-new.png	

EXTRA_DIST =				\
	$(icons_DATA)

install-data-local: install-iconsDATA

uninstall-local:
	rm -rf $(themedir)/24x24/$(context)
