themedir=/usr/share/icons/Tango-Brown
size = scalable
context=actions

iconsdir = $(themedir)/$(size)/$(context)

icons_DATA =                            \
	address-book-new.svg	\
	appointment-new.svg	\
	appointment.svg	\
	back.svg	\
	bookmark_add.svg	\
	bookmark-new.svg	\
	bookmarks_list_add.svg	\
	bottom.svg	\
	centrejust.svg	\
	contact-new.svg	\
	document-new.svg	\
	document-open.svg	\
	document-print-preview.svg	\
	document-print.svg	\
	document-properties.svg	\
	document-save-as.svg	\
	document-save.svg	\
	down.svg	\
	edit-clear.svg	\
	editclear.svg	\
	edit-copy.svg	\
	editcopy.svg	\
	edit-cut.svg	\
	editcut.svg	\
	edit-delete.svg	\
	edit-find-replace.svg	\
	edit-find.svg	\
	edit-paste.svg	\
	editpaste.svg	\
	edit-redo.svg	\
	edit-undo.svg	\
	exit.svg	\
	filefind.svg	\
	filenew.svg	\
	fileopen.svg	\
	fileprint.svg	\
	filequickprint.svg	\
	filesaveas.svg	\
	filesave.svg	\
	find.svg	\
	finish.svg	\
	folder_new.svg	\
	folder-new.svg	\
	format-indent-less.svg	\
	format-indent-more.svg	\
	format-justify-center.svg	\
	format-justify-fill.svg	\
	format-justify-left.svg	\
	format-justify-right.svg	\
	format-text-bold.svg	\
	format-text-italic.svg	\
	format-text-strikethrough.svg	\
	format-text-underline.svg	\
	forward.svg	\
	gnome-lockscreen.svg	\
	gnome-logout.svg	\
	gnome-searchtool.svg	\
	gnome-stock-mail-fwd.svg	\
	gnome-stock-mail-new.svg	\
	gnome-stock-mail-rpl.svg	\
	gnome-stock-text-indent.svg	\
	gnome-stock-text-unindent.svg	\
	go-bottom.svg	\
	go-down.svg	\
	go-first.svg	\
	go-home.svg	\
	gohome.svg	\
	go-jump.svg	\
	go-last.svg	\
	go-next.svg	\
	go-previous.svg	\
	go-top.svg	\
	go-up.svg	\
	gtk-add.svg	\
	gtk-bold.svg	\
	gtk-clear.svg	\
	gtk-copy.svg	\
	gtk-cut.svg	\
	gtk-find-and-replace.svg	\
	gtk-find.svg	\
	gtk-go-back-ltr.svg	\
	gtk-go-back-rtl.svg	\
	gtk-go-down.svg	\
	gtk-go-forward-ltr.svg	\
	gtk-go-forward-rtl.svg	\
	gtk-goto-bottom.svg	\
	gtk-goto-first-ltr.svg	\
	gtk-goto-first-rtl.svg	\
	gtk-goto-last-ltr.svg	\
	gtk-goto-last-rtl.svg	\
	gtk-goto-top.svg	\
	gtk-go-up.svg	\
	gtk-home.svg	\
	gtk-indent.svg	\
	gtk-italic.svg	\
	gtk-jump-to-ltr.svg	\
	gtk-jump-to-rtl.svg	\
	gtk-justify-center.svg	\
	gtk-justify-fill.svg	\
	gtk-justify-left.svg	\
	gtk-justify-right.svg	\
	gtk-media-forward-ltr.svg	\
	gtk-media-forward-rtl.svg	\
	gtk-media-next-ltr.svg	\
	gtk-media-next-rtl.svg	\
	gtk-media-pause.svg	\
	gtk-media-play-ltr.svg	\
	gtk-media-previous-ltr.svg	\
	gtk-media-previous-rtl.svg	\
	gtk-media-record.svg	\
	gtk-media-rewind-ltr.svg	\
	gtk-media-rewind-rtl.svg	\
	gtk-media-stop.svg	\
	gtk-new.svg	\
	gtk-open.svg	\
	gtk-paste.svg	\
	gtk-print-preview.svg	\
	gtk-print.svg	\
	gtk-properties.svg	\
	gtk-redo-ltr.svg	\
	gtk-refresh.svg	\
	gtk-remove.svg	\
	gtk-save-as.svg	\
	gtk-save.svg	\
	gtk-stop.svg	\
	gtk-strikethrough.svg	\
	gtk-underline.svg	\
	gtk-undo-ltr.svg	\
	gtk-unindent.svg	\
	kfind.svg	\
	kfm_home.svg	\
	leftjust.svg	\
	list-add.svg	\
	list-remove.svg	\
	lock.svg	\
	mail_forward.svg	\
	mail-forward.svg	\
	mail-mark-junk.svg	\
	mail-message-new.svg	\
	mail_new.svg	\
	mail_replyall.svg	\
	mail-reply-all.svg	\
	mail-reply-sender.svg	\
	mail_reply.svg	\
	mail-send-receive.svg	\
	mail_spam.svg	\
	media-eject.svg	\
	media-playback-pause.svg	\
	media-playback-start.svg	\
	media-playback-stop.svg	\
	media-record.svg	\
	media-seek-backward.svg	\
	media-seek-forward.svg	\
	media-skip-backward.svg	\
	media-skip-forward.svg	\
	next.svg	\
	player_eject.svg	\
	player_end.svg	\
	player_fwd.svg	\
	player_pause.svg	\
	player_play.svg	\
	player_record.svg	\
	player_rew.svg	\
	player_start.svg	\
	player_stop.svg	\
	previous.svg	\
	process-stop.svg	\
	redhat-home.svg	\
	redo.svg	\
	reload3.svg	\
	reload_all_tabs.svg	\
	reload_page.svg	\
	reload.svg	\
	rightjust.svg	\
	search.svg	\
	start.svg	\
	stock_add-bookmark.svg	\
	stock_bottom.svg	\
	stock_copy.svg	\
	stock_cut.svg	\
	stock_down.svg	\
	stock_file-properites.svg	\
	stock_first.svg	\
	stock_help-add-bookmark.svg	\
	stock_home.svg	\
	stock_last.svg	\
	stock_left.svg	\
	stock_mail-compose.svg	\
	stock_mail-reply.svg	\
	stock_mail-reply-to-all.svg	\
	stock_mail-send-receive.svg	\
	stock_media-fwd.svg	\
	stock_media-next.svg	\
	stock_media-pause.svg	\
	stock_media-play.svg	\
	stock_media-prev.svg	\
	stock_media-rec.svg	\
	stock_media-rew.svg	\
	stock_media-stop.svg	\
	stock_new-address-book.svg	\
	stock_new-appointment.svg	\
	stock_new-bcard.svg	\
	stock_new-dir.svg	\
	stock_new-tab.svg	\
	stock_new-text.svg	\
	stock_new-window.svg	\
	stock_paste.svg	\
	stock_print-preview.svg	\
	stock_print.svg	\
	stock_properties.svg	\
	stock_redo.svg	\
	stock_refresh.svg	\
	stock_right.svg	\
	stock_save-as.svg	\
	stock_save.svg	\
	stock_search-and-replace.svg	\
	stock_search.svg	\
	stock_spam.svg	\
	stock_stop.svg	\
	stock_text_bold.svg	\
	stock_text_center.svg	\
	stock_text_indent.svg	\
	stock_text_italic.svg	\
	stock_text_justify.svg	\
	stock_text_left.svg	\
	stock_text_right.svg	\
	stock_text-strikethrough.svg	\
	stock_text_underlined.svg	\
	stock_text_unindent.svg	\
	stock_top.svg	\
	stock_undo.svg	\
	stock_up.svg	\
	stop.svg	\
	system-lock-screen.svg	\
	system-log-out.svg	\
	system-search.svg	\
	system-shutdown.svg	\
	tab_new.svg	\
	tab-new.svg	\
	text_bold.svg	\
	text_italic.svg	\
	text_strike.svg	\
	text_under.svg	\
	top.svg	\
	undo.svg	\
	up.svg	\
	view-refresh.svg	\
	window_new.svg	\
	window-new.svg	

EXTRA_DIST =						\
	$(icons_DATA)

install-data-local: install-iconsDATA
