themedir=/usr/share/icons/Tango-Brown
size = scalable
context=apps

iconsdir = $(themedir)/$(size)/$(context)

icons_DATA =                            \
	accessibility-directory.svg	\
	accessories-calculator.svg	\
	accessories-character-map.svg	\
	accessories-text-editor.svg	\
	access.svg	\
	arts.svg	\
	background.svg	\
	browser.svg	\
	calc.svg	\
	config-language.svg	\
	config-users.svg	\
	date.svg	\
	email.svg	\
	file-manager.svg	\
	fonts.svg	\
	gnome-calculator.svg	\
	gnome-help.svg	\
	gnome-mixer.svg	\
	gnome-monitor.svg	\
	gnome-remote-desktop.svg	\
	gnome-session.svg	\
	gnome-settings-accessibility-technologies.svg	\
	gnome-settings-background.svg	\
	gnome-settings-font.svg	\
	gnome-settings-keybindings.svg	\
	gnome-settings-sound.svg	\
	gnome-settings-theme.svg	\
	gnome-terminal.svg	\
	gnome-window-manager.svg	\
	gtk-help.svg	\
	gucharmap.svg	\
	help-browser.svg	\
	help.svg	\
	internet-group-chat.svg	\
	internet-mail.svg	\
	internet-news-reader.svg	\
	internet-web-browser.svg	\
	kcalc.svg	\
	kcharselect.svg	\
	kcmkwm.svg	\
	kcmsound.svg	\
	kedit.svg	\
	key_bindings.svg	\
	kfm.svg	\
	khelpcenter.svg	\
	knotify.svg	\
	konsole.svg	\
	krfb.svg	\
	kscreensaver.svg	\
	ksysguard.svg	\
	kuser.svg	\
	kwin.svg	\
	locale.svg	\
	mail_generic.svg	\
	multimedia.svg	\
	multimedia-volume-control.svg	\
	office-calendar.svg	\
	openterm.svg	\
	preferences-desktop-accessibility.svg	\
	preferences-desktop-assistive-technology.svg	\
	preferences-desktop-font.svg	\
	preferences-desktop-keyboard-shortcuts.svg	\
	preferences-desktop-locale.svg	\
	preferences-desktop-remote-desktop.svg	\
	preferences-desktop-screensaver.svg	\
	preferences-desktop-sound.svg	\
	preferences-desktop-theme.svg	\
	preferences-desktop-wallpaper.svg	\
	preferences-system-network-proxy.svg	\
	preferences-system-session.svg	\
	preferences-system-windows.svg	\
	proxy-config.svg	\
	proxy.svg	\
	redhat-email.svg	\
	redhat-filemanager.svg	\
	redhat-web-browser.svg	\
	screensaver.svg	\
	stock_help.svg	\
	stock_proxy.svg	\
	style.svg	\
	susehelpcenter.svg	\
	system-config-users.svg	\
	system-file-manager.svg	\
	system-installer.svg	\
	system-software-update.svg	\
	system-users.svg	\
	terminal.svg	\
	text-editor.svg	\
	utilities-system-monitor.svg	\
	utilities-terminal.svg	\
	wallpaper.svg	\
	web-browser.svg	\
	xscreensaver.svg	

EXTRA_DIST =						\
	$(icons_DATA)

install-data-local: install-iconsDATA
