themedir=/usr/share/icons/Tango-Brown
size = scalable
context=categories

iconsdir = $(themedir)/$(size)/$(context)

icons_DATA =                            \
	applications-accessories.svg	\
	applications-development.svg	\
	applications-games.svg	\
	applications-graphics.svg	\
	applications-internet.svg	\
	applications-multimedia.svg	\
	applications-office.svg	\
	applications-other.svg	\
	applications-system.svg	\
	gnome-applications.svg	\
	gnome-control-center.svg	\
	gnome-devel.svg	\
	gnome-globe.svg	\
	gnome-graphics.svg	\
	gnome-joystick.svg	\
	gnome-multimedia.svg	\
	gnome-settings.svg	\
	gnome-system.svg	\
	gnome-util.svg	\
	gtk-preferences.svg	\
	input_devices_settings.svg	\
	package_development.svg	\
	package_games.svg	\
	package_graphics.svg	\
	package_multimedia.svg	\
	package_network.svg	\
	package_office.svg	\
	package_settings.svg	\
	package_system.svg	\
	package_utilities.svg	\
	preferences-desktop-peripherals.svg	\
	preferences-desktop.svg	\
	preferences-system.svg	\
	redhat-accessories.svg	\
	redhat-games.svg	\
	redhat-graphics.svg	\
	redhat-internet.svg	\
	redhat-office.svg	\
	redhat-preferences.svg	\
	redhat-programming.svg	\
	redhat-sound_video.svg	\
	redhat-system_settings.svg	\
	redhat-system_tools.svg	\
	stock_internet.svg	

EXTRA_DIST =						\
	$(icons_DATA)

install-data-local: install-iconsDATA
