themedir=/usr/share/icons/Tango-Brown
size = scalable
context=devices

iconsdir = $(themedir)/$(size)/$(context)

icons_DATA =                            \
	3floppy_unmount.svg	\
	audio-card.svg	\
	audio-input-microphone.svg	\
	battery.svg	\
	camera-photo.svg	\
	camera.svg	\
	camera_unmount.svg	\
	camera-video.svg	\
	cdrom_unmount.svg	\
	cdwriter_unmount.svg	\
	chardevice.svg	\
	computer.svg	\
	display.svg	\
	drive-cdrom.svg	\
	drive-harddisk.svg	\
	drive-removable-media.svg	\
	dvd_unmount.svg	\
	gnome-dev-battery.svg	\
	gnome-dev-cdrom-audio.svg	\
	gnome-dev-cdrom.svg	\
	gnome-dev-computer.svg	\
	gnome-dev-disc-cdr.svg	\
	gnome-dev-disc-cdrw.svg	\
	gnome-dev-disc-dvdram.svg	\
	gnome-dev-disc-dvdrom.svg	\
	gnome-dev-disc-dvdr-plus.svg	\
	gnome-dev-disc-dvdr.svg	\
	gnome-dev-disc-dvdrw.svg	\
	gnome-dev-dvd.svg	\
	gnome-dev-ethernet.svg	\
	gnome-dev-floppy.svg	\
	gnome-dev-harddisk-1394.svg	\
	gnome-dev-harddisk.svg	\
	gnome-dev-harddisk-usb.svg	\
	gnome-dev-ipod.svg	\
	gnome-dev-keyboard.svg	\
	gnome-dev-media-cf.svg	\
	gnome-dev-media-memory.svg	\
	gnome-dev-media-ms.svg	\
	gnome-dev-media-sdmmc.svg	\
	gnome-dev-media-sm.svg	\
	gnome-dev-mouse-ball.svg	\
	gnome-dev-mouse-optical.svg	\
	gnome-dev-printer.svg	\
	gnome-dev-removable-1394.svg	\
	gnome-dev-removable.svg	\
	gnome-dev-removable-usb.svg	\
	gnome-dev-wavelan.svg	\
	gnome-fs-client.svg	\
	gnome-stock-mic.svg	\
	gtk-cdrom.svg	\
	gtk-floppy.svg	\
	gtk-harddisk.svg	\
	harddrive.svg	\
	hdd_unmount.svg	\
	input-gaming.svg	\
	input-keyboard.svg	\
	input-mouse.svg	\
	joystick.svg	\
	keyboard.svg	\
	kjobviewer.svg	\
	kxkb.svg	\
	media-cdrom.svg	\
	media-floppy.svg	\
	mouse.svg	\
	multimedia-player.svg	\
	network-wired.svg	\
	network-wireless.svg	\
	printer1.svg	\
	printer-remote.svg	\
	printer.svg	\
	printmgr.svg	\
	stock_mic.svg	\
	stock_printers.svg	\
	system.svg	\
	usbpendrive_unmount.svg	\
	video-display.svg	\
	yast_HD.svg	\
	yast_idetude.svg	\
	yast_joystick.svg	\
	yast_mouse.svg	\
	yast_printer.svg	\
	yast_soundcard.svg	

EXTRA_DIST =						\
	$(icons_DATA)

install-data-local: install-iconsDATA
