themedir=/usr/share/icons/Tango-Brown
size = scalable
context=emblems

iconsdir = $(themedir)/$(size)/$(context)

icons_DATA =                            \
	emblem-favorite.svg	\
	emblem-important.svg	\
	emblem-photos.svg	\
	emblem-readonly.svg	\
	emblem-symbolic-link.svg	\
	emblem-system.svg	\
	emblem-unreadable.svg	\
	stock_mail-priority-high.svg	

EXTRA_DIST =						\
	$(icons_DATA)

install-data-local: install-iconsDATA
