themedir=/usr/share/icons/Tango-Brown
size = scalable
context=emotes

iconsdir = $(themedir)/$(size)/$(context)

icons_DATA =                            \
	face-angel.svg	\
	face-crying.svg	\
	face-devil-grin.svg	\
	face-glasses.svg	\
	face-grin.svg	\
	face-kiss.svg	\
	face-sad.svg	\
	face-smile-big.svg	\
	face-smile.svg	\
	face-surprise.svg	\
	face-wink.svg	

EXTRA_DIST =						\
	$(icons_DATA)

install-data-local: install-iconsDATA
