themedir=/usr/share/icons/Tango-Brown
size = scalable
context=mimetypes

iconsdir = $(themedir)/$(size)/$(context)

icons_DATA =                            \
	application-certificate.svg	\
	application-x-executable.svg	\
	ascii.svg	\
	audio-x-generic.svg	\
	binary.svg	\
	contents2.svg	\
	deb.svg	\
	document.svg	\
	empty.svg	\
	exec.svg	\
	folder_tar.svg	\
	gnome-fs-executable.svg	\
	gnome-fs-regular.svg	\
	gnome-mime-applciation-vnd.stardivision.writer.svg	\
	gnome-mime-application-magicpoint.svg	\
	gnome-mime-application-msword.svg	\
	gnome-mime-application-ogg.svg	\
	gnome-mime-application-pdf.svg	\
	gnome-mime-application-postscript.svg	\
	gnome-mime-application-rtf.svg	\
	gnome-mime-application-vnd.lotus-1-2-3.svg	\
	gnome-mime-application-vnd.ms-excel.svg	\
	gnome-mime-application-vnd.oasis.opendocument.presentation.svg	\
	gnome-mime-application-vnd.oasis.opendocument.spreadsheet.svg	\
	gnome-mime-application-vnd.oasis.opendocument.text.svg	\
	gnome-mime-application-vnd.stardivision.calc.svg	\
	gnome-mime-application-vnd.stardivision.impress.svg	\
	gnome-mime-application-vnd.sun.xml.calc.svg	\
	gnome-mime-application-vnd.sun.xml.impress.svg	\
	gnome-mime-application-vnd.sun.xml.writer.svg	\
	gnome-mime-application-wordperfect.svg	\
	gnome-mime-application-x-7z-compressed.svg	\
	gnome-mime-application-x-abiword.svg	\
	gnome-mime-application-x-applix-spreadsheet.svg	\
	gnome-mime-application-x-applix-word.svg	\
	gnome-mime-application-x-archive.svg	\
	gnome-mime-application-x-arj.svg	\
	gnome-mime-application-x-bzip-compressed-tar.svg	\
	gnome-mime-application-x-bzip.svg	\
	gnome-mime-application-x-compressed-tar.svg	\
	gnome-mime-application-x-compress.svg	\
	gnome-mime-application-x-cpio-compressed.svg	\
	gnome-mime-application-x-cpio.svg	\
	gnome-mime-application-x-deb.svg	\
	gnome-mime-application-x-dvi.svg	\
	gnome-mime-application-x-executable.svg	\
	gnome-mime-application-x-gnumeric.svg	\
	gnome-mime-application-x-gzip.svg	\
	gnome-mime-application-x-killustrator.svg	\
	gnome-mime-application-x-kpresenter.svg	\
	gnome-mime-application-x-kspread.svg	\
	gnome-mime-application-x-kword.svg	\
	gnome-mime-application-x-ms-dos-executable.svg	\
	gnome-mime-application-x-perl.svg	\
	gnome-mime-application-x-php.svg	\
	gnome-mime-application-x-python-bytecode.svg	\
	gnome-mime-application-x-rar.svg	\
	gnome-mime-application-x-rpm.svg	\
	gnome-mime-application-x-shellscript.svg	\
	gnome-mime-application-x-shockwave-flash.svg	\
	gnome-mime-application-x-tar.svg	\
	gnome-mime-application-x-tarz.svg	\
	gnome-mime-application-x-tex.svg	\
	gnome-mime-application-zip.svg	\
	gnome-mime-audio.svg	\
	gnome-mime-image.svg	\
	gnome-mime-text-html.svg	\
	gnome-mime-text.svg	\
	gnome-mime-text-vnd.wap.wml.svg	\
	gnome-mime-text-x-csh.svg	\
	gnome-mime-text-x-python.svg	\
	gnome-mime-text-x-zsh.svg	\
	gnome-mime-video.svg	\
	gnome-package.svg	\
	html.svg	\
	image.svg	\
	image-x-generic.svg	\
	mime_ascii.svg	\
	misc.svg	\
	package_editors.svg	\
	package.svg	\
	package_wordprocessing.svg	\
	package-x-generic.svg	\
	plan.svg	\
	rpm.svg	\
	shellscript.svg	\
	sound.svg	\
	spreadsheet.svg	\
	stock_addressbook.svg	\
	stock_calendar.svg	\
	stock_script.svg	\
	tar.svg	\
	template_source.svg	\
	text-html.svg	\
	text-x-generic.svg	\
	text-x-generic-template.svg	\
	text-x-script.svg	\
	tgz.svg	\
	txt2.svg	\
	txt.svg	\
	unknown.svg	\
	vcalendar.svg	\
	video.svg	\
	video-x-generic.svg	\
	x-directory-normal-drag-accept.svg	\
	x-directory-normal-home.svg	\
	x-directory-normal-open.svg	\
	x-directory-normal.svg	\
	x-directory-remote.svg	\
	x-office-address-book.svg	\
	x-office-calendar.svg	\
	x-office-document.svg	\
	x-office-presentation.svg	\
	x-office-spreadsheet.svg	\
	zip.svg	

EXTRA_DIST =						\
	$(icons_DATA)

install-data-local: install-iconsDATA
