themedir=/usr/share/icons/Tango-Brown
size = scalable
context=places

iconsdir = $(themedir)/$(size)/$(context)

icons_DATA =                            \
	application-x-gnome-saved-search.svg	\
	desktop.svg	\
	emptytrash.svg	\
	folder_home.svg	\
	folder.icon	\
	folder-remote.svg	\
	folder-saved-search.svg	\
	folder.svg	\
	gnome-fs-desktop.svg	\
	gnome-fs-directory.svg	\
	gnome-fs-ftp.svg	\
	gnome-fs-home.svg	\
	gnome-fs-network.svg	\
	gnome-fs-nfs.svg	\
	gnome-fs-server.svg	\
	gnome-fs-share.svg	\
	gnome-fs-smb.svg	\
	gnome-fs-ssh.svg	\
	gnome-fs-trash-empty.svg	\
	gnome-main-menu.svg	\
	gnome-stock-trash.svg	\
	gtk-delete.svg	\
	gtk-network.svg	\
	network_local.svg	\
	network-server.svg	\
	network.svg	\
	network-workgroup.svg	\
	redhat-network-server.svg	\
	server.svg	\
	start-here.svg	\
	stock_delete.svg	\
	stock_folder.svg	\
	trashcan_empty.svg	\
	user-desktop.svg	\
	user-home.svg	\
	user-trash.svg	

EXTRA_DIST =						\
	$(icons_DATA)

install-data-local: install-iconsDATA
